--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Brahmnoor Singh Chawla">
+    <meta property="og:url" content="http://brahmnoor.me/">
+    <meta property="og:image" content="">
+    <meta property="profile:first_name" content="Brahmnoor Singh">
+    <meta property="profile:last_name" content="Chawla">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
   </head>
   <body>
 
