--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <!-- Required CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Poppins:300,800" rel="stylesheet">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="canonical" href="http://brahmnoor.me/"/>
+    <meta name="description" content="Hi, I'm Brahmnoor Singh Chawla (too long? well people call me Brahm). I'm currently studying computer science engineering at the University of Hong Kong.">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Brahmnoor Singh Chawla">
     <meta property="og:url" content="http://brahmnoor.me/">
@@ -23,10 +25,30 @@
     <header class="home">
       <div class="overlay">
         <h2>Hi there! I am </h2>
-        <h1>Brahmnoor Singh</h1>
+        <h1>Brahmnoor S. Chawla</h1>
         <h2>I am a <span class="typed"></span></h2>
+        <div class="buttons">
+          <a class="top-button" href="resume.pdf">Resume</a>
+          <a class="top-button" href="#contact" style="margin-left: 20px;">Contact</a>
+        </div>
       </div>
     </header>
+
+    <section class="intro content container-fluid">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <p class="col-md-6">I am currently a first-year undergraduate student studying Computer Science at The University of Hong Kong. With a keen interest in web development and algorithmic programming, I have done some cool projects during my high school years. In 2016, I was also part of top 25 students in India to be selected for the International Olympiad in Informatics training camp.</p>
+        <div class="col-md-3"></div>
+      </div>
+    </section>
+
+    <section class="education">
+      <div class="heading" style="background-image: url('img/bg2.jpg');">
+        <h2>Education</h2>
+      </div>
+      <div class="row">
+
+    </section>
 
     <!-- Required JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
