--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Poppins:300,800" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -37,7 +38,12 @@
     <section class="intro content container-fluid">
       <div class="row">
         <div class="col-md-3"></div>
-        <p class="col-md-6">I am currently a first-year undergraduate student studying Computer Science at The University of Hong Kong. With a keen interest in web development and algorithmic programming, I have done some cool projects during my high school years. In 2016, I was also part of top 25 students in India to be selected for the International Olympiad in Informatics training camp.</p>
+
+        <div class="col-md-6">
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. In 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Goverment of India for showing excellent aptitude in research. </p>
+        </div>
         <div class="col-md-3"></div>
       </div>
     </section>
