--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Brahmnoor Singh</title>
+    <title>Brahmnoor Singh Chawla</title>
     <!-- Required CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -40,9 +40,9 @@
         <div class="col-md-3"></div>
 
         <div class="col-md-6">
-          <i class="fa fa-user" aria-hidden="true"></i>
-          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. In 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
-          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Goverment of India for showing excellent aptitude in research. </p>
+          <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
+          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -52,7 +52,19 @@
       <div class="heading" style="background-image: url('img/bg2.jpg');">
         <h2>Education</h2>
       </div>
-      <div class="row">
+      <div class="container-fluid content-black">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
+            <span class="heading-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+            <p>
+              <div class="logo-circle">
+                <img class="logo" src="img/hku-mono.gif">
+              </div>
+          </div>
+          <div class="col-md-3"></div>
+        </div>
+      </div>
 
     </section>
 
