--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="canonical" href="http://brahmnoor.me/"/>
-    <meta name="description" content="Hi, I'm Brahmnoor Singh Chawla (too long? well people call me Brahm). I'm currently studying computer science engineering at the University of Hong Kong.">
+    <meta name="description" content="Hi, I'm Brahmnoor Singh Chawla (too long? Well...people call me Brahm). I'm currently a year 1 student, studying computer science engineering at the University of Hong Kong.">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Brahmnoor Singh Chawla">
     <meta property="og:url" content="http://brahmnoor.me/">
@@ -41,7 +41,7 @@
 
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
-          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>, where I am part of the Dean's Honor List for scoring exceptional grades in my first semester. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
           <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
@@ -54,15 +54,17 @@
       </div>
       <div class="container-fluid content-black">
         <div class="row">
-          <div class="col-md-3"></div>
-          <div class="col-md-6">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
             <span class="heading-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
-            <p>
               <div class="logo-circle">
-                <img class="logo" src="img/hku-mono.gif">
+                <img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong">
               </div>
+              <h3>The University of Hong Kong</h3>
+              <h5>Aug 16' - Aug 21'</h5>
+              <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
           </div>
-          <div class="col-md-3"></div>
+          <div class="col-md-4"></div>
         </div>
       </div>
 
