--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
-          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/">The University of Hong Kong</a>, where I am part of the Dean's Honor List for scoring exceptional grades in my first semester. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
-          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
+          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List for scoring exceptional grades in my first semester. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -57,14 +57,47 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
             <span class="heading-icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
+          </div>
+          <div class="col-md-4"></div>
+
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
               <div class="logo-circle">
-                <img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong">
+                <a href="https://www.hku.hk/" target="_blank"><img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong"></a>
               </div>
               <h3>The University of Hong Kong</h3>
-              <h5>Aug 16' - Aug 21'</h5>
+              <h5>Aug 17' - Aug 21'</h5>
               <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
           </div>
           <div class="col-md-4"></div>
+
+          <div class="col-md-1"></div>
+          <div class="col-md-3">
+            <div class="logo-circle">
+              <a href="http://www.iiserkol.ac.in/" target="_blank"><img class="logo" src="img/iiser-logo.png" alt="IISER Kolkata" style="margin-top:-20px;"></a>
+            </div>
+            <h3>IISER Kolkata</h3>
+            <h5>Nov 16' - Dec 16'</h5>
+            <p>I was selected among the top 0.01% students from all over India for the Kishore Vaigyanik Protsahan Yojana scholarship, where I attended a pure sciences training camp in the city of Kolkata.</p>
+          </div>
+          <div class="col-md-4">
+              <div class="logo-circle">
+                <a href="https://www.cmi.ac.in/" target="_blank"><img class="logo" src="img/cmi-logo.png" alt="Chennai Mathematical Institute"></a>
+              </div>
+              <h3>Chennai Mathematical Institute</h3>
+              <h5>Jan 17' - Feb 17'</h5>
+              <p>I was selected among the top 25 programmers from all over India for the International Olympiad in Informatics training camp, which was organised in Chennai Mathematical Institute in beautiful Indian city of Chennai. The coursework included advanced data structures and algorithms.</p>
+          </div>
+          <div class="col-md-3">
+            <div class="logo-circle">
+              <a href="https://dpsmathuraroad.org/" target="_blank"><img class="logo" src="img/dps-logo.png" alt="Delhi Public School"></a>
+            </div>
+            <h3>Delhi Public School, New Delhi</h3>
+            <h5>May 06' - May 16'</h5>
+            <p>I attended my high school here, in the centre of India - New Delhi. A beautiful place to learn, the school was founded in 1949.</p>
+          </div>
+          <div class="col-md-1"></div>
+
         </div>
       </div>
 
