--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
-          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List for scoring exceptional grades in my first semester. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
           <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
@@ -90,7 +90,7 @@
           </div>
           <div class="col-md-3">
             <div class="logo-circle">
-              <a href="https://dpsmathuraroad.org/" target="_blank"><img class="logo" src="img/dps-logo.png" alt="Delhi Public School"></a>
+              <a href="https://dpsmathuraroad.org/" target="_blank"><img class="logo" src="img/dps-logo.png" alt="Delhi Public School" style="margin-top: -10px;"></a>
             </div>
             <h3>Delhi Public School, New Delhi</h3>
             <h5>May 06' - May 16'</h5>
