--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="education">
       <div class="heading" style="background-image: url('img/bg2.jpg');">
-        <h2>Education</h2>
+        <h2>Education.</h2>
       </div>
       <div class="container-fluid content-black">
         <div class="row">
@@ -101,6 +101,63 @@
         </div>
       </div>
 
+    </section>
+
+    <section class="projects" id="projects">
+      <div class="heading" style="background-image: url('img/bg4.jpg');">
+        <h2>Stuff.</h2>
+      </div>
+
+      <div class="container-fluid content">
+        <div class="row">
+
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <span class="heading-icon"><i class="fa fa-code" aria-hidden="true"></i></span>
+          </div>
+          <div class="col-md-4"></div>
+
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="logo-circle" style="background: #dd1055;">
+              <a href="http://wordyo.ga/" target="_blank"><img class="logo" src="img/wordyoga.png" alt="WordYoga" style="margin-left: -11px;"></a>
+            </div>
+            <h3>WordYo.ga</h3>
+            <h5>Aug 16'</h5>
+            <p>WordYoga is the 4 letter game that everyone's been addicted to! I developed this game in PHP when I was in my high school - something which made me popular for a day or two. :) </p>
+          </div>
+          <div class="col-md-4"></div>
+
+          <div class="col-md-1"></div>
+          <div class="col-md-3">
+            <div class="logo-circle" style="background: #fed136;">
+              <a href="https://github.com/brahmnoor/FastLearn" target="_blank"><img class="logo" src="img/fastlearn.png" alt="Fast Learn" style="margin-top: -40px; margin-left: -30px; height: 200px;"></a>
+            </div>
+            <h3>Fast Learn</h3>
+            <h5>Apr 17'</h5>
+            <p>Developed for a 48-hour hackathon in CodeIgniter, FastLearn is a machine learning based learning system which generates questions from a given text. After lots of coffee, I managed to implement a buzzer system for in-class quizzes on the platform. It won the 2nd prize.</p>
+          </div>
+          <div class="col-md-4">
+              <div class="logo-circle">
+                <a href="http://www.techjunction.in/" target="_blank"><img class="logo" src="img/techjunction.png" alt="Tech Junction" style="margin-top: -40px; margin-left: -40px; height: 200px;"></a>
+              </div>
+              <h3>Tech Junction</h3>
+              <h5>Jan 15' - Feb 16'</h5>
+              <p>As a high-school student I was very passionate with technology and the latest gadgets, hence I came up with this blog where I regularly posted my opinions about the latest gadgets in the market. The blog was insanely famous and was listed among the top 10 most-visited tech blogs in India in 2015.</p>
+          </div>
+          <div class="col-md-3">
+            <div class="logo-circle">
+              <a href="https://github.com/brahmnoor/alfatutors" target="_blank"><img class="logo" src="img/alfatutors.png" alt="Alfa Tutors" style="margin-top: -30px; height: 200px; margin-left: -70px;"></a>
+            </div>
+            <h3>Alfa Tutors</h3>
+            <h5>Sept 16'</h5>
+            <p>A platform connecting students and tutors, I deveoped this website in Bootstrap, and CodeIgniter using PHP. Was choosen as the best open source platform in several inter-school events. Moreover, it was also choosen as the best designed website in 2 inter-school events.</p>
+          </div>
+          <div class="col-md-1"></div>
+
+        <!-- row selector -->
+        </div>
+      </div>
     </section>
 
     <!-- Required JS -->
