--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
       </div>
     </section>
 
+    <section class="about">
+      <div class="heading heading-about" style="background-image: url('img/bg6.png');">
+        <h2>Me.</h2>
+      </div>
+      <div class="container-fluid content-black">
+        
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="container-fluid content">
+      </div>
+    </section>
+
     <!-- Required JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
