--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>I am a <span class="typed"></span></h2>
         <div class="buttons">
           <a class="top-button" href="resume.pdf">Resume</a>
-          <a class="top-button" href="#contact" style="margin-left: 20px;">Contact</a>
+          <a class="top-button" href="#footer" style="margin-left: 20px;">Contact</a>
         </div>
       </div>
     </header>
@@ -164,15 +164,42 @@
       <div class="heading heading-about" style="background-image: url('img/bg6.png');">
         <h2>Me.</h2>
       </div>
-      <div class="container-fluid content-black">
-        
+      <div class="intro container-fluid content-black">
+        <div class="row">
+          <div class="col-md-3"></div>
+
+          <div class="col-md-6">
+            <span class="heading-icon"><i class="fa fa-address-card" aria-hidden="true"></i></span>
+            <p>There’s so much stuff I love apart from programming. Deeply passionate about cricket – I’m great at hitting the ball out of the field. Tennis and badminton are the two games I can play any time. When it comes to movies, novels and TV shows – I love watching and reading intriguing stuff which makes me think deeply afterwards. Moreover, as a member of the media team of Shun Hing College, I also like writing articles on their <a href="http://www.shunhingcollege.hku.hk/blog/" target="_blank">blog</a>. And oh – I also like writing my opinions on <a href="https://www.quora.com/profile/Brahmnoor-Singh" target="_blank">Quora</a>.</p>
+          </div>
+          <div class="col-md-3"></div>
+        </div>
       </div>
     </section>
 
-    <section class="footer">
+    <footer id="footer">
       <div class="container-fluid content">
+        <div class="row">
+          <div class="col-md-5"></div>
+          <div class="col-md-2">
+            <p style="font-size: 40px; margin-bottom: 0;">
+              <a href="mailto:brahm@connect.hku.hk" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/brahmnoorsingh" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> </a>
+              <a href="https://www.linkedin.com/in/brahmnoor/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+              <a href="https://github.com/brahmnoor/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+            </p>
+          </div>
+          <div class="col-md-5"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <p style="padding-top: 10px; border-top: 1px solid #e2e2e2; margin-top: 0; font-size: 18px;">Copyright 2018 © Brahmnoor Singh Chawla</p>
+          </div>
+          <div class="col-md-4"></div>
+        </div>
       </div>
-    </section>
+    </footer>
 
     <!-- Required JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
