--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Brahmnoor Singh Chawla">
     <meta property="og:url" content="http://brahmnoor.me/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://brahmnoor.me/img/preview.png">
     <meta property="profile:first_name" content="Brahmnoor Singh">
     <meta property="profile:last_name" content="Chawla">
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
