--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <meta property="profile:first_name" content="Brahmnoor Singh">
     <meta property="profile:last_name" content="Chawla">
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113056475-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113056475-1');
+    </script>
+
   </head>
   <body>
 
