--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
-          <p>I am currently a first-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. With a keen interest in web development and algorithmic programming, I have done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+          <p>I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List for excellent academic performance. With a keen interest in web development and algorithmic programming, I have worked on NodeJS and Google Cloud APIs as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
           <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
@@ -130,7 +130,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4">
             <div class="logo-circle" style="background: #dd1055;">
-              <a href="http://wordyo.ga/" target="_blank"><img class="logo" src="img/wordyoga.png" alt="WordYoga" style="margin-left: -11px;"></a>
+              <img class="logo" src="img/wordyoga.png" alt="WordYoga" style="margin-left: -11px;">
             </div>
             <h3>WordYo.ga</h3>
             <h5>Aug 16'</h5>
