--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="canonical" href="http://brahmnoor.me/"/>
-    <meta name="description" content="Hi, I'm Brahmnoor Singh Chawla (too long? Well...people call me Brahm). I'm currently a year 1 student, studying computer science engineering at the University of Hong Kong.">
+    <meta name="description" content="Hey there, I'm Brahmnoor! I'm currently a year 2 student, studying computer science engineering at the University of Hong Kong. I'm interested in machine learning and web development, and have done quite a few projects in them.">
     <meta property="og:type" content="profile">
     <meta property="og:title" content="Brahmnoor Singh Chawla">
     <meta property="og:url" content="http://brahmnoor.me/">
@@ -40,7 +40,7 @@
         <h2>I am a <span class="typed"></span></h2>
         <div class="buttons">
           <a class="top-button" href="resume.pdf">Resume</a>
-          <a class="top-button" href="#footer" style="margin-left: 20px;">Contact</a>
+          <a class="top-button" href="mailto:brahm@connect.hku.hk" style="margin-left: 20px;">Contact</a>
         </div>
       </div>
     </header>
@@ -52,7 +52,7 @@
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
           <p>I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List for excellent academic performance. With a keen interest in web development and algorithmic programming, I have worked on NodeJS and Google Cloud APIs as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a> during my high school years. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
-          <p>Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
+          <p>Other than Computer Science, I love travelling and experiencing different cultures. I've travelled for fun, work and studies to South Korea, Philippines, Vietnam, and India. Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research. </p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -80,6 +80,28 @@
               <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
           </div>
           <div class="col-md-4"></div>
+
+          <div class="col-md-1"></div>
+          <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://www.kaist.edu" target="_blank"><img class="logo" src="img/kaist.png" style="margin-left: -11px; margin-top: -10.5px;" alt="KAIST, South Korea"></a>
+            </div>
+            <h3>KAIST, South Korea</h3>
+            <h5>Jul 18' - Aug 18'</h5>
+            <p>I travelled to South Korea to study for a summer program in KAIST, where I did Discrete Mathematics. It was a wonderful experience, and South Korea is a beautiful country with a vividly amazing culture. The most difficult part was to speak Korean to the locals, but apart from that - it was an unforgettable trip.</p>
+          </div>
+
+          <div class="col-md-2"></div>
+
+          <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://commonpurpose.org/" target="_blank"><img class="logo" src="img/commonpurpose.jpg" style="margin-left: -8.5px; margin-top: -4px;" alt="Leadership Development Program, Philippines"></a>
+            </div>
+            <h3>Leadership Development Program, Philippines</h3>
+            <h5>Jun 18' - Jul 18'</h5>
+            <p>I attended a leadership development program organised by Common Purpose in Manila, Philippines where we had some fun workshops, followed by a month-long internship in a non-profit organization. I experienced a totally different culture in the Philippines and exponentially increased my cultural intelligence here.</p>
+          </div>
+          <div class="col-md-1"></div>
 
           <div class="col-md-1"></div>
           <div class="col-md-3">
@@ -161,7 +183,7 @@
             </div>
             <h3>Alfa Tutors</h3>
             <h5>Sept 16'</h5>
-            <p>A platform connecting students and tutors, I deveoped this website in Bootstrap, and CodeIgniter using PHP. Was choosen as the best open source platform in several inter-school events. Moreover, it was also choosen as the best designed website in 2 inter-school events.</p>
+            <p>A platform connecting students and tutors, I developed this website in Bootstrap, and CodeIgniter using PHP. Was choosen as the best open source platform in several inter-school events. Moreover, it was also choosen as the best designed website in 2 inter-school events.</p>
           </div>
           <div class="col-md-1"></div>
 
@@ -171,7 +193,7 @@
     </section>
 
     <section class="about">
-      <div class="heading heading-about" style="background-image: url('img/bg6.png');">
+      <div class="heading heading-about" style="background-image: url('img/bg7.jpg');">
         <h2>Me.</h2>
       </div>
       <div class="intro container-fluid content-black">
