--- a/index.html
+++ b/index.html
@@ -52,16 +52,13 @@
         <div class="col-md-6">
           <span class="heading-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
           <p>
-            I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. I will be travelling to <a href="http://princeton.edu" target="_blank">Princeton University</a> during the spring of 2019, where I'll be taking advanced courses in computer science.
+            I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. I will be travelling to <a href="http://princeton.edu" target="_blank">Princeton University</a> during the spring of 2019 on exchange, where I'll be taking advanced courses in computer science.
           </p>
           <p>
             I have a keen interest in solving complex problems using computer algorithms. That's probably why I enjoy representing The University of Hong Kong regionally in Association for Computing Machinery's ICPC competitive programming competitions. I also enjoy teaching this stuff, and that's why I'm currently a teaching assistant for Computer Programming in Python, and Everyday Computing & Internet (at HKU).
           </p>
           <p>
             Other than this, I have a keen interest in software development, and I have worked on NodeJS and Google Cloud APIs as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a>. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
-          <p>
-            Other than computer science, I love travelling and experiencing different cultures. I've travelled for fun, work and studies to South Korea, Philippines, Vietnam, China, Thailand and India. Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research.
-          </p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -211,7 +208,12 @@
 
           <div class="col-md-6">
             <span class="heading-icon"><i class="fa fa-address-card" aria-hidden="true"></i></span>
-            <p>There’s so much stuff I love apart from programming. Deeply passionate about cricket – I’m great at hitting the ball out of the field. Tennis and badminton are the two games I can play any time. When it comes to movies, novels and TV shows – I love watching and reading intriguing stuff which makes me think deeply afterwards. Moreover, as a member of the media team of Shun Hing College, I also like writing articles on their <a href="http://www.shunhingcollege.hku.hk/blog/" target="_blank">blog</a>. And oh – I also like writing my opinions on <a href="https://www.quora.com/profile/Brahmnoor-Singh" target="_blank">Quora</a>.</p>
+            <p>
+              I love travelling and experiencing different cultures. I've travelled for fun, work and studies to South Korea, Philippines, Vietnam, China, Thailand and India. Before coming to Hong Kong for my undergraduate studies, I was a high student at Delhi Public School in New Delhi (India) where I was among the 0.01% students from all over India who were awarded the <a href="http://www.kvpy.iisc.ernet.in/main/index.htm" target="_blank">Kishore Vaigyanik Protsahan Yojana</a> scholarship by the Government of India for showing excellent aptitude in research.
+            </p>
+            <p>
+              There’s so much stuff I love apart from programming. Deeply passionate about cricket – I’m great at hitting the ball out of the field. Tennis and badminton are the two games I can play any time. When it comes to movies, novels and TV shows – I love watching and reading intriguing stuff which makes me think deeply afterwards. Moreover, as the editor of the media team of Shun Hing College, I manage their <a href="https://medium.com/@shunhingcollege" target="_blank">blog</a>. And oh – I also like writing my opinions on <a href="https://www.quora.com/profile/Brahmnoor-Singh" target="_blank">Quora</a>.
+            </p>
           </div>
           <div class="col-md-3"></div>
         </div>
