--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-4"></div>
 
-          <div class="col-md-4"></div>
+          <!--<div class="col-md-4"></div>
           <div class="col-md-4">
               <div class="logo-circle">
                 <a href="https://www.hku.hk/" target="_blank"><img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong"></a>
@@ -85,7 +85,29 @@
               <h5>Aug 17' - Aug 21'</h5>
               <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
           </div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>-->
+
+          <div class="col-md-1"></div>
+          <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://www.hku.hk/" target="_blank"><img class="logo" src="img/hku-mono.gif" alt="The University of Hong Kong"></a>
+            </div>
+            <h3>The University of Hong Kong</h3>
+            <h5>Aug 17' - Aug 21'</h5>
+            <p>I’m currently pursing my undergraduate studies in computer science here - in the city of Hong Kong. It’s a vividly amazing experience. Over the time that I’ve spent here – I’ve learnt, researched, created amazing projects and walked a lot!</p>
+          </div>
+
+          <div class="col-md-2"></div>
+
+          <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://princeton.edu/" target="_blank"><img class="logo" src="img/princeton.png" style="margin-left: -8.5px; margin-top: -4px;" alt="Leadership Development Program, Philippines"></a>
+            </div>
+            <h3>Princeton University</h3>
+            <h5>Jan 19' - Jul 19'</h5>
+            <p>I was selected as the only student from the Faculty of Engineering at The University of Hong Kong for a semester long exchange at Princeton University. I'll be travelling to New Jersey in the spring of 2019, and pursing courses in computer science.</p>
+          </div>
+          <div class="col-md-1"></div>
 
           <div class="col-md-1"></div>
           <div class="col-md-4">
