landing screen update

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           <a class="top-button" href="resume.pdf">Resume</a>
           <a class="top-button" href="mailto:brahm@connect.hku.hk" style="margin-left: 20px;">Contact</a>
         </div>
-        <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
+        <h5>(Scroll down to learn more)</h5>
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
       </div>
     </header>
 
