--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             I am currently a second-year undergraduate student studying Computer Science at <a href="https://www.hku.hk/" target="_blank">The University of Hong Kong</a>, where I am part of the Dean's Honor List. I will be travelling to <a href="http://princeton.edu" target="_blank">Princeton University</a> during the spring of 2019 on exchange, where I'll be taking advanced courses in computer science.
           </p>
           <p>
-            I have a keen interest in solving complex problems using computer algorithms. That's probably why I enjoy representing The University of Hong Kong regionally in Association for Computing Machinery's ICPC competitive programming competitions. I also enjoy teaching this stuff, and that's why I'm currently a teaching assistant for Computer Programming in Python, and Everyday Computing & Internet (at HKU).
+            Since high school, I have a deep interest in solving complex problems using computer algorithms. I've represented The University of Hong Kong regionally in Association for Computing Machinery's ICPC competitive programming competitions. I also enjoy teaching this stuff, and that's why I'm currently a teaching assistant for Computer Programming in Python, and Everyday Computing & Internet (at HKU).
           </p>
           <p>
-            Other than this, I have a keen interest in software development, and I have worked on NodeJS and Google Cloud APIs as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a>. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
+            Other than this, I have a keen interest in software development, and I have worked on Javascript (Node, Vue, Angular and Express) and Python as a research assistant under Professor Ricky Kwok (at HKU). Furthermore, I have also done some <a href="#projects">cool projects</a>. Moreover, in 2016, I was among the top 25 students in India to be selected for the <a href="https://www.iarcs.org.in/inoi/2017/inoi2017/results_inoi2017.php" target="_blank">International Olympiad in Informatics</a> training camp, where I studied about data structures and algorithms from the finest Computer Science professors across India.</p>
         </div>
         <div class="col-md-3"></div>
       </div>
@@ -179,16 +179,32 @@
           </div>
           <div class="col-md-4"></div>
 
-          <div class="col-md-4"></div>
-          <div class="col-md-4">
+          <div class="col-md-1"></div>
+          <div class="col-md-3">
             <div class="logo-circle" style="background: #dd1055;">
-              <img class="logo" src="img/wordyoga.png" alt="WordYoga" style="margin-left: -11px;">
+              <a href="https://github.com/brahmnoor/PreBook" target="_blank"><img class="logo" src="img/prebook.jpg" alt="PreBook" style="margin-left:-30px;margin-top:-30px;height:210px;"></a>
+            </div>
+            <h3>PreBook</h3>
+            <h5>Dec 18'</h5>
+            <p>Developed a movie booking website, with user login, a seat booking page (showing the available seats), commenting, and movie history using PHP and mySQL. Then recreated all the functionalities in Express and MongoDB.</p>
+          </div>
+          <div class="col-md-4">
+            <div class="logo-circle">
+              <a href="https://github.com/brahmnoor/TextToSpeech" target="_blank"><img class="logo" src="img/cloud.png" alt="Google Cloud" style="margin-left: -11px; margin-top: -10px;"></a>
+            </div>
+            <h3>Google Text To Speech</h3>
+            <h5>Apr 18'</h5>
+            <p>Worked with Google Cloud API to build a real-time speech-to-text script on NodeJS and SocketIO. Built for Teli at The University of Hong Kong to help converting Cantonese text to speech to help out in accessibility of huge array of softwares built for students. </p>
+          </div>
+          <div class="col-md-3">
+            <div class="logo-circle" style="background: #dd1055;">
+              <a href="https://github.com/brahmnoor/WordYoga" target="_blank"><img class="logo" src="img/wordyoga.png" alt="WordYoga" style="margin-left: -11px;"></a>
             </div>
             <h3>WordYo.ga</h3>
             <h5>Aug 16'</h5>
             <p>WordYoga is the 4 letter game that everyone's been addicted to! I developed this game in PHP when I was in my high school - something which made me popular for a day or two. :) </p>
           </div>
-          <div class="col-md-4"></div>
+          <div class="col-md-1"></div>
 
           <div class="col-md-1"></div>
           <div class="col-md-3">
